# panscape

./: README.md  environment.yml  pyproject.toml
src/panscape/: __init__.py  cli.py  config.py  exceptions.py  logging.py  manifest.py  paths.py
src/panscape/commands/: __init__.py  build.py  map.py  species.py  strain.py  update.py
src/panscape/runners/: __init__.py  ani.py  base.py  checkm2.py  mapper.py  mash.py  mmseqs.py  samtools.py  skani.py
src/panscape/utils/: __init__.py  io.py  subprocess.py  validation.py
tests/: test_backbone_scoring.py  test_build_integration_mock.py  test_checkm2_runner.py  test_cli_smoke.py  test_fasta_stats.py  test_gene_filter.py  test_graph_utils.py  test_kmer_mappability.py  test_representation.py
tests/data/: genomes.tsv
tests/data/genomes/: g1.fna  g2.fna  g3.fna
